--- a/frontend/src/components/LandingPage/Pricing/Pricing.css
+++ b/frontend/src/components/LandingPage/Pricing/Pricing.css
@@ -1,21 +1,23 @@
 /* Pricing.css */
 
 .pricing-section {
-  padding: 80px 0;
+  padding-top: 20px;
   /* background-color: #fff; */
   background-color: #3486bd;
-
 }
 
 .pricing-container {
+  
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
 }
 
 .pricing-section-title {
+  font-size: 3rem;
+  line-height: 1.5;
+  font-weight: 900;
   text-align: center;
-  margin-bottom: 40px;
   color: #fff;
 }
 
@@ -29,27 +31,36 @@
 .pricing-card {
   background-color: #fff;
   border: 1px solid #ddd;
-  border-radius: 8px;
+  border-radius: 20px;
   padding: 0;
   width: 30%;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
   margin-bottom: 20px;
+  padding-bottom: 73px ;
+  position: relative;
 }
 
 .pricing-card-header {
-  background-color: #f2f2f2;
+  /* background-color: #f2f2f2; */
   border-bottom: 1px solid #ddd;
   padding: 10px 20px;
-  margin: 0;
   display: flex;
-  justify-content: space-between;
+  width: 100%;
+  justify-content: center;
   align-items: center;
+  text-align: center;
+  border-radius-top:20px;
 }
 
 .pricing-card-title {
   font-size: 24px;
   color: #007bff;
   text-align: center;
-  margin: 0; 
+  align-items:center;
+  display:inline-block;
+  
 }
 
 .pricing-card-price {
@@ -57,23 +68,31 @@
   font-weight: bold;
   color: #333;
   margin-top: 20px;
+  padding:20px 0;     
   text-align: center;
 }
 
 .pricing-card-content {
-  text-align: center ;
-  margin :20px;
+  text-align: left ;
+  align-items: center;
+  display: contents;
+  /* margin :20px; */
+  /* padding :  */
 }
 
 .pricing-card-features {
   list-style-type: none;
-  justify-content: center;
+  display:flex;
+  flex-direction:column;
+  align-items:flex-start;
   padding: 0;
+  width :70%;
+  
 }
 
 .pricing-card-features li {
   margin-bottom: 10px;
-  display: flex;
+  display: inline-block;
   align-items: center;
 }
 
@@ -96,14 +115,17 @@
 .pricing-card-button {
   display: block;
   width: calc(100% - 40px);
-  margin: 20px auto 0;
+  margin: 20px auto 20px;
   padding: 10px 20px;
   border: none;
-  border-radius: 5px;
+  border-radius: 7px;
   background-color: #007bff;
   color: #fff;
   text-align: center;
   cursor: pointer;
+  bottom: -3px;
+  position: absolute;
+  /* width:80%; */
 }
 
 .pricing-card-button:hover {
@@ -120,5 +142,17 @@
 @media (max-width: 768px) {
   .pricing-card {
     width: 100%;
+  }
+
+  .pricing-card-content {
+    margin: 20px;
+  }
+  
+  .pricing-card-features {
+    width: 80%;
+  }
+  
+  .pricing-card-button {
+    width: calc(100% - 40px);
   }
 }
