--- a/frontend/src/components/LandingPage/Footer/Footer.css
+++ b/frontend/src/components/LandingPage/Footer/Footer.css
@@ -2,7 +2,7 @@
     height: 100%;
     width: 100%;
     display: flex;
-    background-color: #3486bd;
+    background-color: #03113d;
     color: white;
     flex-direction: column;
     padding: 3rem 0;
@@ -36,7 +36,7 @@
   #main-footer-div #upper-footer #footer-logo #socials-logo a {
     text-decoration: none;
     color: white;
-    background-color: #1e2e3e;
+  background-color: #03113d;
     padding: 0.1rem 0.4rem;
     border-radius: 5px;
     border: 2px solid #1e2e3e;
