--- a/frontend/src/components/Login/login.css
+++ b/frontend/src/components/Login/login.css
@@ -1,22 +1,159 @@
 /* Import Google font - Poppins */
-#Login-box-form{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-    display: flex;
-  }
-  
- 
-  #login-body {
-    flex: 1;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(181, 200, 250, 1) url('https://miro.medium.com/v2/resize:fit:1400/0*r37IVgW745eadA5T') center/cover; /* Set the background image */
-  }
-  
+#Login-box-form {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+}
+
+#login-body {
+  flex: 1;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(181, 200, 250, 1)
+    url("https://miro.medium.com/v2/resize:fit:1400/0*r37IVgW745eadA5T")
+    center/cover; /* Set the background image */
+}
+
+.Login-wrapper {
+  position: relative;
+  max-width: 600px;
+  width: 100%;
+  border-radius: 12px;
+  padding: 20px 30px 120px;
+  background: #3fb8e3;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.Login-wrapper form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 40px;
+}
+
+.Login-form.login {
+  position: absolute;
+  left: 50%;
+  bottom: -86%;
+  transform: translateX(-50%);
+  width: calc(100% + 220px);
+  padding: 20px 140px;
+  border-radius: 50%;
+  height: 100%;
+  background: #fff;
+  transition: all 0.6s ease;
+}
+
+.Login-form.login header {
+  color: #333;
+  opacity: 0.6;
+}
+
+.Login-form.login input {
+  border: 1px solid #aaa;
+}
+
+.Login-form.login input:focus {
+  box-shadow: 0 1px 0 #ddd;
+}
+
+.Login-form.login input[type="submit"] {
+  color: #fff;
+  border: none;
+  background: #3fb8e3;
+}
+.Login-form #signup input[type="submit"] {
+  color: #fff;
+  border: none;
+  background: #77e48f;
+}
+
+.Login-wrapper.active .Login-form.login {
+  bottom: -15%;
+  border-radius: 35%;
+  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.Login-wrapper.active .Login-form.login header {
+  opacity: 1;
+}
+
+.Login-wrapper.active #signup header {
+  opacity: 0.6;
+}
+
+.Login-form header {
+  font-size: 30px;
+  text-align: center;
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.Login-wrapper form {
+  height: 300px;
+}
+
+.Login-wrapper form input {
+  height: 60px;
+  outline: none;
+  border: none;
+  padding: 0 15px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #333;
+  border-radius: 8px;
+  background: #fff;
+}
+
+.Login-wrapper form .checkbox {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.Login-wrapper form .checkbox label {
+  cursor: pointer;
+  color: #fff;
+}
+
+.Login-wrapper form a {
+  color: #333;
+  text-decoration: none;
+}
+
+.Login-wrapper form a:hover {
+  text-decoration: underline;
+}
+
+.Login-wrapper form input[type="submit"] {
+  margin-top: 15px;
+  padding: none;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+}
+/* Style for select tag inside signup form */
+.Login-wrapper form select {
+  width: 350px;
+  height: 60px;
+  outline: none;
+  border: none;
+  padding: 0 15px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #333;
+  border-radius: 8px;
+  background: #fff;
+}
+
+/* For Desktop View */
+@media screen and (min-width: 1024px) {
   .Login-wrapper {
     position: relative;
     max-width: 600px;
@@ -27,78 +164,21 @@
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
   }
-  
+
   .Login-wrapper form {
+    align-items: center;
+    height: 350px;
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 40px;
+    width: 500px;
+    align-items: center;
+    padding-left: 40px;
   }
-  
-  .Login-form.login {
-    position: absolute;
-    left: 50%;
-    bottom: -86%;
-    transform: translateX(-50%);
-    width: calc(100% + 220px);
-    padding: 20px 140px;
-    border-radius: 50%;
-    height: 100%;
-    background: #fff;
-    transition: all 0.6s ease;
-  }
-  
-  .Login-form.login header {
-    color: #333;
-    opacity: 0.6;
-  }
-  
-  .Login-form.login input {
-    border: 1px solid #aaa;
-  }
-  
-  .Login-form.login input:focus {
-    box-shadow: 0 1px 0 #ddd;
-  }
-  
-  .Login-form.login input[type="submit"] {
-      color: #fff;
-      border: none;
-      background: #3fb8e3;
-  }
-  .Login-form #signup input[type="submit"] {
-    color: #fff;
-    border: none;
-    background: #77e48f;
-}
-  
-  .Login-wrapper.active .Login-form.login {
-    bottom: -15%;
-    border-radius: 35%;
-    box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .Login-wrapper.active .Login-form.login header {
-    opacity: 1;
-  }
-  
-  .Login-wrapper.active #signup header {
-    opacity: 0.6;
-  }
-  
-  .Login-form header {
-    font-size: 30px;
-    text-align: center;
-    color: #fff;
-    font-weight: 600;
-    cursor: pointer;
-  }
-  
-  .Login-wrapper form {
-    height: 300px;
-  }
-  
-  .Login-wrapper form input {
+
+  .Login-wrapper input {
+    width: 350px;
     height: 60px;
     outline: none;
     border: none;
@@ -109,109 +189,68 @@
     border-radius: 8px;
     background: #fff;
   }
-  
-  .Login-wrapper form .checkbox {
-    display: flex;
+}
+
+/* For Tablet View */
+@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .Login-wrapper {
+    position: relative;
+    max-width: 600px;
+    width: 100%;
+    border-radius: 12px;
+    padding: 20px 30px 120px;
+    background: #3fb8e3;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+  }
+
+  .Login-wrapper form {
+    height: 300px;
     align-items: center;
-    gap: 10px;
+    padding-left: 130px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 40px;
+    width: 400px;
   }
-  
-  .Login-wrapper form .checkbox label {
-    cursor: pointer;
-    color: #fff;
-  }
-  
-  .Login-wrapper form a {
+
+  .Login-wrapper input {
+    width: 350px;
+    height: 60px;
+    outline: none;
+    border: none;
+    padding: 0 15px;
+    font-size: 16px;
+    font-weight: 400;
     color: #333;
-    text-decoration: none;
+    border-radius: 8px;
+    background: #fff;
   }
-  
-  .Login-wrapper form a:hover {
-    text-decoration: underline;
+}
+
+@media screen and (min-width: 1024px) {
+  .Login-wrapper form select {
+    width: 350px; /* Adjust width for desktop */
+    height: 60px;
+    margin-bottom: 20px; /* Increase margin for desktop */
   }
-  
-  .Login-wrapper form input[type="submit"] {
-    margin-top: 15px;
-    padding: none;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
+}
+
+/* For Tablet View */
+@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .Login-wrapper form select {
+    width: 300px; /* Adjust width for tablet */
+    height: 50px;
+    margin-bottom: 15px; /* Adjust margin for tablet */
   }
-  
-  /* For Desktop View */
-  @media screen and (min-width: 1024px) {
-    .Login-wrapper {
-      position: relative;
-      max-width: 600px;
-      width: 100%;
-      border-radius: 12px;
-      padding: 20px 30px 120px;
-      background: #3fb8e3;
-      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-    }
-  
-    .Login-wrapper form {
-      align-items: center;
-      height: 350px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      margin-top: 40px;
-      width: 500px;
-      align-items: center;
-      padding-left: 40px;
-    }
-  
-    .Login-wrapper input {
-      width: 350px;
-      height: 60px;
-      outline: none;
-      border: none;
-      padding: 0 15px;
-      font-size: 16px;
-      font-weight: 400;
-      color: #333;
-      border-radius: 8px;
-      background: #fff;
-    }
+}
+
+/* For Mobile View */
+@media screen and (max-width: 767px) {
+  .Login-wrapper form select {
+    width: calc(100% - 30px); /* Adjust width for mobile */
+    height: 45px;
+    margin-bottom: 10px; /* Adjust margin for mobile */
   }
-  
-  /* For Tablet View */
-  @media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-    .Login-wrapper {
-      position: relative;
-      max-width: 600px;
-      width: 100%;
-      border-radius: 12px;
-      padding: 20px 30px 120px;
-      background: #3fb8e3;
-      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-    }
-  
-    .Login-wrapper form {
-      height: 300px;
-      align-items: center;
-      padding-left: 130px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      margin-top: 40px;
-      width: 400px;
-    }
-  
-    .Login-wrapper input {
-      width: 350px;
-      height: 60px;
-      outline: none;
-      border: none;
-      padding: 0 15px;
-      font-size: 16px;
-      font-weight: 400;
-      color: #333;
-      border-radius: 8px;
-      background: #fff;
-    }
-  }
-  
+}
